--- a/bower.json
+++ b/bower.json
@@ -5,13 +5,14 @@
     "angular": "~1.2.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap": "~3.2.0",
     "angular-resource": "~1.2.0",
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "foundation": "~5.4.7",
+    "font-awsome": "~4.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
