--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "seminaire2014",
   "version": "0.0.0",
-  "dependencies": {},
   "devDependencies": {
+    "coffee-script": "^1.8.0",
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-concurrent": "^0.5.0",
@@ -26,8 +26,12 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
+    "karma-coffee-preprocessor": "^0.2.1",
+    "karma-jasmine": "^0.2.3",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.4.0",
-    "time-grunt": "^0.3.1"
+    "time-grunt": "^0.3.1",
+    "grunt-sass": "^0.16.1"
   },
   "engines": {
     "node": ">=0.10.0"
