--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
     "foundation": "~5.4.7",
-    "font-awsome": "~4.2.0"
+    "font-awsome": "~4.2.0",
+    "leaflet": "~0.7.3",
+    "angular-leaflet-directive": "~0.7.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
