--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1",
-    "grunt-sass": "^0.16.1",
+    "grunt-sass": "~0.8.1",
     "bower": "^1.3.12"
   },
   "engines": {
