--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "foundation": "~5.4.7",
     "font-awsome": "~4.2.0",
     "leaflet": "~0.7.3",
-    "angular-leaflet-directive": "~0.7.9"
+    "angular-leaflet-directive": "~0.7.9",
+    "checklist-model": "~0.1.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
