--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "leaflet": "~0.7.3",
     "angular-leaflet-directive": "~0.7.9",
     "checklist-model": "~0.1.3",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "angular-ui-router": "~0.2.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
