--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-leaflet-directive": "~0.7.9",
     "checklist-model": "~0.1.3",
     "font-awesome": "~4.2.0",
-    "angular-ui-router": "~0.2.11"
+    "angular-ui-router": "~0.2.11",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
