--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-leaflet-directive": "~0.7.9",
     "font-awesome": "~4.2.0",
     "angular-ui-router": "~0.2.11",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "cryptojslib": "~3.1.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
@@ -25,6 +26,9 @@
   "overrides": {
     "foundation": {
       "main": "js/foundation.min.js"
+    },
+    "cryptojslib": {
+      "main": "rollups/sha1.js"
     }
   },
   "appPath": "app"
