--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "font-awesome": "~4.2.0",
     "angular-ui-router": "~0.2.11",
     "underscore": "~1.7.0",
-    "cryptojslib": "~3.1.2"
+    "cryptojslib": "~3.1.2",
+    "angular-notify": "~2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
